# allure_docker_example

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: github-actions-demo.yml
tests/: test_example.py
