[tool.poetry]
name = "tests-example"
version = "0.1.0"
description = ""
authors = ["LiPaVi <lipalacheva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.0.0"
requests = "^2.31.0"
allure-pytest = "^2.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
